hello-app-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-1
  namespace: dev
spec:
  selector:
    matchLabels:
      app: hello-app-1
  replicas: 3
  template:
    metadata:
      labels:
        app: hello-app-1
    spec:
      containers:
      - name: hello-app-1
        image: "gcr.io/google-samples/hello-app:1.0"
