hello-app-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-2
  namespace: dev
spec:
  selector:
    matchLabels:
      app: hello-app-2
  replicas: 3
  template:
    metadata:
      labels:
        app: hello-app-2
    spec:
      containers:
      - name: hello-app-2
        image: "gcr.io/google-samples/hello-app:2.0"
