hello-app-1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-1-service
  namespace: dev
  labels:
    app: hello-app-1
spec:
  type: NodePort
  selector:
    app: hello-app-1
  ports:
  - port: 80
    name: http
    targetPort: 8080
    protocol: TCP
