ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: dev
spec:
  rules:
  - host: hello2.35.247.167.189.xip.io
    http:
      paths:
      - backend:
          serviceName: hello-app-2-service
          servicePort: http
